<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_user_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/small_padding">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/DialogHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/add_user_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_name_prompt_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_email_prompt_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_user_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_user_cancel_button"
            style="@style/BasicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_user_ok_button"
            style="@style/BasicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_text" />

    </LinearLayout>

</LinearLayout>